[package]
name = "alcantara"
version = "0.1.0"
authors = ["Simon Brix <vdb.simon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
hyper = "0.13"
native-tls = "*"
url = "*"
open = "*"
tempfile = "*"
